--- a/.htaccess
+++ b/.htaccess
@@ -1,12 +1,8 @@
 # GZIP Apache 2.0
 # BEGIN GZIP
-SetOutputFilter DEFLATE
-AddOutputFilterByType DEFLATE text/html text/css text/plain text/xml application/x-javascript
-
-BrowserMatch ^Mozilla/4 gzip-only-text/html
-BrowserMatch ^Mozilla/4\.0[678] no-gzip
-BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
-BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
+<FilesMatch *.(html|css|jpg|jpeg|png|gif|js|ico)>
+    SetOutputFilter DEFLATE
+</FilesMatch>
 # END GZIP
 
 # CACHE NAVIGATEUR
@@ -21,6 +17,7 @@ BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
 <filesMatch "\.(html|htm)$">
 Header set Cache-Control "max-age=7200, public"
 </filesMatch>
+
 # Enleve le cache pour les ressources dynamiques
 <FilesMatch "\.(pl|php|cgi|spl|scgi|fcgi)$">
 Header unset Cache-Control
@@ -30,7 +27,9 @@ Header unset Cache-Control
 
 # BEGIN Expires Headers
 <IfModule mod_expires.c>
+
 ExpiresActive On
+
 ExpiresByType image/jpg "access plus 1 month"
 ExpiresByType image/jpeg "access plus 1 month"
 ExpiresByType image/gif "access plus 1 month"
@@ -41,5 +40,13 @@ ExpiresByType text/x-javascript "access plus 1 month"
 ExpiresByType application/x-shockwave-flash "access plus 1 year"
 ExpiresByType image/x-icon "access plus 1 year"
 ExpiresDefault "access plus 2 days"
+
+## Font files expiration: 1 week after request
+ExpiresByType application/x-font-ttf "now plus 1 week"
+ExpiresByType application/x-font-opentype "now plus 1 week"
+ExpiresByType application/x-font-woff "now plus 1 week"
+ExpiresByType font/woff2 "now plus 1 week"
+ExpiresByType image/svg+xml "now plus 1 week"
+
 </IfModule>
 # END Expires Headers
