Added social link title

--- a/.htaccess
+++ b/.htaccess
@@ -4,6 +4,10 @@
     SetOutputFilter DEFLATE
 </FilesMatch>
 # END GZIP
+BrowserMatch ^Mozilla/4 gzip-only-text/html
+BrowserMatch ^Mozilla/4\.0[678] no-gzip
+BrowserMatch \bMSIE !no-gzip !gzip-only-text/html
+BrowserMatch \bMSI[E] !no-gzip !gzip-only-text/html
 
 # CACHE NAVIGATEUR
 # BEGIN Cache-Control Headers
